<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Parse keys begin -->
    <string name="PARSE_CLIENT_KEY">id3HUe7FjFu1Uv9LxNL62qpBuOPnGfxVSVHQgKlZ</string>
    <string name="PARSE_APPLICATION_ID">D9G2m65Wbq4jFDD9fpUOZgzDKpbYSShUtNlIQpCo</string>
    <!-- Parse keys end -->
    
    <string name="app_name">Selos Monopoly</string>
    <string name="action_settings">Settings</string>
    <string name="action_user">Login</string>
    <string name="lb_have">Tenho</string>
    <string name="lb_dont_have">Não Tenho</string>
    <string name="sign_up">Cadastre-se</string>
    <string name="sign_in">Login</string>
    <string name="AD_UNIT_ID_TOP">ca-app-pub-7746920603636507/4275014071</string>
    <string name="AD_UNIT_ID_BOTTON">ca-app-pub-7746920603636507/2798280870</string>
    <string name="lb_email">email</string>
    <string name="lb_pass">senha</string>
    <string name="lb_save">Salvar</string>
    <string name="welcome_string_2">--- ou ---</string>
    <string name="welcome_string_1">Para começar faça seu</string>
    <string name="hash">#</string>
    <string name="search_hint">ex. 402</string>
    <string name="search_go">Ir</string>
    <string name="saving">Salvando...</string>
    <string name="cards">Cards</string>
    <string name="cards_atualizados">Cards atualizados!</string>

</resources>
