<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="15dp" >

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/lb_email"
        android:inputType="textEmailAddress"
        android:maxLines="1" />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="55dp"
        android:hint="@string/lb_pass"
        android:inputType="textPassword"
        android:maxLines="1" />

    <TextView
        android:id="@+id/tvSignup"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="120dp"
        android:background="@android:color/holo_blue_light"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/lnBanBotton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" />

</RelativeLayout>