<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_monopoly"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hash"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint"
            android:maxLines="1"
            android:minLines="1" />

        <TextView
            android:id="@+id/tvSearch"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:background="@color/buttons"
            android:gravity="center"
            android:text="@string/search_go"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp" >

        <LinearLayout
            android:id="@+id/svCards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="40dp" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/lnBanBotton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" />

</RelativeLayout>